2005-02-10 Satya Sudha K <ksathyasudha@novell.com>
	* expression.cs: 
		 - Implemented Exponentiation operator (^)
		 - Fixed the behaviour of strings in arithmatic operations (only addition 
		   was supported before)
		 - Fixed Decimal arithmatic with float/double types
		 - If operation = Division, promoting both operands to double, otherwise
		   doing numeric promotions
	* mb-parser.jay : Changes related to the Exponentiation operator

2005-02-10 Manjula GHM <mmanjula@novell.com>
	* expression.cs: Fixed concat of date and string using '+" operator 

2005-02-08  Satya Sudha K  <ksathyasudha@novell.com>
	* assign.cs: Fix for implicit conversions in Compound Assignments
	* ecore.cs :
		- Fixed the explicit conversion of float/double to integral types
		  by rounding the float/double values before performing the actual 
		  conversion
		- Using 'ConvCast' instead of 'OpcodeCast' for Narrowing conversions

2005-02-07  Ritvik Mayank <mritvik@novell.com>
	* modifiers.cs
	* class.cs
	* decl.cs
	* expression.cs
	* tree.cs
	* statement.cs
	            Changed for reflecting correct Error Number.

2005-02-07  Manjula GHM  <mmanjula@novell.com>
	* mb-parser.jay: Some more fixes related to displaying correct line number

2005-02-04  Satya Sudha K  <ksathyasudha@novell.com>
	* ecore.cs 	: Fixed the implicit conversion of float/double to integral types:
				- Rounding the float/double values before performing the actual conversion

	* expression.cs : 1) Added a class 'StringConcat' to handle string concatenations
			  2) Fixed string conversions in arithmatic operations

	* mb-parser.jay : Create a new 'StringConcat' object (instead of Binary) for concat_expression
 
2005-02-03  Manjula GHM  <mmanjula@novell.com>
	*mb-parser.jay : Reports error with correct line number in most of the cases covered by existing testcases. Need to cover in expressions and few more areas. 
 
2005-02-03  Manjula GHM  <mmanjula@novell.com>
	* mbas.csproj
        * mbas.sln