@@ -1,8 +1,4 @@
-REM LineNo: 13
-REM ExpectedError: BC30424
-REM ErrorMessage: Constants must be an intrinsic or enumerated type, not a class, structure, or array type.
-
-REM LineNo: 13
+REM LineNo: 9
 REM ExpectedError: BC30438
 REM ErrorMessage: Constants must have a value.
 
