@@ -3,7 +3,7 @@
 '
 ' (C) 2003 Ximian, Inc.
 
-REM LineNo: 22
+REM LineNo: 21
 REM ExpectedError: BC30398
 REM ErrorMessage: 'Public Overrides Sub fun1(ByRef i As Integer)' cannot override 'Public Overridable Sub fun1(i As Integer)' because they differ by a parameter that is marked as 'ByRef' versus 'ByVal'.
 
